--- a/src/mastermind/gui/fxml/GameBoard.fxml
+++ b/src/mastermind/gui/fxml/GameBoard.fxml
@@ -12,18 +12,18 @@
 
 <AnchorPane layoutY="55.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mastermind.controllers.GameBoard">
    <children>
-      <ImageView fx:id="img" fitHeight="661.0" fitWidth="761.0" layoutX="41.0" layoutY="-56.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-5.0" AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="44.46600341796875" AnchorPane.topAnchor="-56.0">
+      <ImageView fx:id="img" fitHeight="811.0" fitWidth="743.0" layoutX="49.0" layoutY="-198.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="49.0" AnchorPane.rightAnchor="49.764404296875" AnchorPane.topAnchor="-198.0">
          <image>
             <Image url="@../img/background/GameBoard.png" />
          </image>
       </ImageView>
-      <Button fx:id="purpleButton" layoutX="290.0" layoutY="240.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: mediumpurple;" />
-      <Button fx:id="orangeButton" layoutX="290.0" layoutY="201.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: darkorange;" />
-      <Button fx:id="yellowButton" layoutX="290.0" layoutY="163.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: gold;" />
+      <Button fx:id="purpleButton" layoutX="290.0" layoutY="247.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: mediumpurple;" />
+      <Button fx:id="orangeButton" layoutX="290.0" layoutY="206.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: darkorange;" />
+      <Button fx:id="yellowButton" layoutX="290.0" layoutY="165.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: gold;" />
       <Button fx:id="blueButton" layoutX="290.0" layoutY="124.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: royalblue;" />
-      <Button fx:id="redButton" layoutX="290.0" layoutY="85.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: crimson;" />
-      <Button fx:id="greenButton" layoutX="290.0" layoutY="47.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: seagreen;" />
-      <Button fx:id="resetButton" layoutX="286.0" layoutY="295.0" mnemonicParsing="false" prefHeight="16.0" prefWidth="22.0" style="-fx-background-color: white">
+      <Button fx:id="redButton" layoutX="290.0" layoutY="83.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: crimson;" />
+      <Button fx:id="greenButton" layoutX="290.0" layoutY="42.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: seagreen;" />
+      <Button fx:id="resetButton" layoutX="285.0" layoutY="300.0" mnemonicParsing="false" prefHeight="16.0" prefWidth="22.0" style="-fx-background-color: white">
          <graphic>
             <ImageView fitHeight="28.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -31,7 +31,7 @@
                </image>
             </ImageView>
          </graphic></Button>
-      <Button fx:id="checkButton" layoutX="286.0" layoutY="354.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="22.0" style="-fx-background-color: white">
+      <Button fx:id="checkButton" layoutX="286.0" layoutY="358.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="22.0" style="-fx-background-color: white">
          <graphic>
             <ImageView fitHeight="25.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -39,7 +39,7 @@
                </image>
             </ImageView>
          </graphic></Button>
-      <GridPane fx:id="guessGrid" layoutX="373.0" layoutY="32.0" prefHeight="439.0" prefWidth="129.0">
+      <GridPane fx:id="guessGrid" layoutX="372.0" layoutY="31.0" prefHeight="430.0" prefWidth="129.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -47,19 +47,19 @@
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="52.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="82.0" minHeight="8.5" prefHeight="45.5" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="73.0" minHeight="0.0" prefHeight="45.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="54.5" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="45.5" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="45.5" minHeight="10.0" prefHeight="45.5" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="52.0" minHeight="10.0" prefHeight="42.5" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="54.5" minHeight="10.0" prefHeight="46.5" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="44.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="45.5" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="54.5" minHeight="10.0" prefHeight="44.5" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="82.0" minHeight="8.5" prefHeight="44.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="75.0" minHeight="0.0" prefHeight="44.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="55.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="57.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="53.0" minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="52.0" minHeight="10.0" prefHeight="43.5" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="54.5" minHeight="10.0" prefHeight="48.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <GridPane fx:id="createGrid" layoutX="357.0" layoutY="481.0" prefHeight="49.0" prefWidth="136.0">
+      <GridPane fx:id="createGrid" layoutX="349.0" layoutY="472.0" prefHeight="47.0" prefWidth="152.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -70,7 +70,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <GridPane fx:id="responseGrid" layoutX="520.0" layoutY="30.0" prefHeight="440.0" prefWidth="40.0">
+      <GridPane fx:id="responseGrid" layoutX="517.0" layoutY="34.0" prefHeight="429.0" prefWidth="40.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -79,33 +79,42 @@
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="34.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="33.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="33.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="32.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="34.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="32.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="32.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <Text id="text" fx:id="text" layoutX="339.0" layoutY="543.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="252.63671875">
+      <Text id="text" fx:id="text" layoutX="283.0" layoutY="540.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="282.6366882324219">
          <font>
-            <Font size="11.0" />
+            <Font name="SansSerif Regular" size="13.0" />
          </font></Text>
-      <Button fx:id="nextButton" layoutX="514.0" layoutY="493.0" mnemonicParsing="false" onAction="#onNextBtnClick" text="Next">
+      <Button fx:id="nextButton" layoutX="517.0" layoutY="484.0" mnemonicParsing="false" onAction="#onNextBtnClick" text="Next">
          <font>
             <Font name="SansSerif Regular" size="12.0" />
          </font>
+      </Button>
+      <Button fx:id="questionButton" layoutX="568.0" layoutY="35.0" mnemonicParsing="false" onAction="#onQuestionBtnClick" prefHeight="18.0" prefWidth="8.0">
+         <graphic>
+            <ImageView fitHeight="14.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/icons/question.png" />
+               </image>
+            </ImageView>
+         </graphic>
       </Button>
    </children>
 </AnchorPane>
