--- a/bin/mastermind/gui/fxml/GameBoard.fxml
+++ b/bin/mastermind/gui/fxml/GameBoard.fxml
@@ -10,20 +10,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane layoutY="55.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mastermind.controllers.GameBoard">
+<AnchorPane layoutY="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="630.0" prefWidth="840.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mastermind.controllers.GameBoard">
    <children>
-      <ImageView fx:id="img" fitHeight="811.0" fitWidth="743.0" layoutX="49.0" layoutY="-198.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="49.0" AnchorPane.rightAnchor="49.764404296875" AnchorPane.topAnchor="-198.0">
+      <ImageView fx:id="img" fitHeight="815.0" fitWidth="742.0" layoutX="53.0" layoutY="-168.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="30.2574462890625" AnchorPane.leftAnchor="53.0" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="-168.0">
          <image>
             <Image url="@../img/background/GameBoard.png" />
          </image>
       </ImageView>
-      <Button fx:id="purpleButton" layoutX="290.0" layoutY="247.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: mediumpurple;" />
-      <Button fx:id="orangeButton" layoutX="290.0" layoutY="206.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: darkorange;" />
-      <Button fx:id="yellowButton" layoutX="290.0" layoutY="165.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: gold;" />
-      <Button fx:id="blueButton" layoutX="290.0" layoutY="124.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: royalblue;" />
-      <Button fx:id="redButton" layoutX="290.0" layoutY="83.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: crimson;" />
-      <Button fx:id="greenButton" layoutX="290.0" layoutY="42.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: seagreen;" />
-      <Button fx:id="resetButton" layoutX="285.0" layoutY="300.0" mnemonicParsing="false" prefHeight="16.0" prefWidth="22.0" style="-fx-background-color: white">
+      <Button fx:id="purpleButton" layoutX="294.0" layoutY="277.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: mediumpurple;" />
+      <Button fx:id="orangeButton" layoutX="294.0" layoutY="236.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: darkorange;" />
+      <Button fx:id="yellowButton" layoutX="294.0" layoutY="195.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: gold;" />
+      <Button fx:id="blueButton" layoutX="294.0" layoutY="154.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: royalblue;" />
+      <Button fx:id="redButton" layoutX="294.0" layoutY="113.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: crimson;" />
+      <Button fx:id="greenButton" layoutX="294.0" layoutY="72.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="29.0" style="-fx-background-color: seagreen;" />
+      <Button fx:id="resetButton" layoutX="289.0" layoutY="330.0" mnemonicParsing="false" prefHeight="16.0" prefWidth="22.0" style="-fx-background-color: white">
          <graphic>
             <ImageView fitHeight="28.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -31,7 +31,7 @@
                </image>
             </ImageView>
          </graphic></Button>
-      <Button fx:id="checkButton" layoutX="286.0" layoutY="358.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="22.0" style="-fx-background-color: white">
+      <Button fx:id="checkButton" layoutX="290.0" layoutY="388.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="22.0" style="-fx-background-color: white">
          <graphic>
             <ImageView fitHeight="25.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -39,7 +39,7 @@
                </image>
             </ImageView>
          </graphic></Button>
-      <GridPane fx:id="guessGrid" layoutX="372.0" layoutY="31.0" prefHeight="430.0" prefWidth="129.0">
+      <GridPane fx:id="guessGrid" layoutX="376.0" layoutY="61.0" prefHeight="430.0" prefWidth="129.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -59,7 +59,7 @@
             <RowConstraints maxHeight="54.5" minHeight="10.0" prefHeight="48.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <GridPane fx:id="createGrid" layoutX="349.0" layoutY="472.0" prefHeight="47.0" prefWidth="152.0">
+      <GridPane fx:id="createGrid" layoutX="356.0" layoutY="502.0" prefHeight="47.0" prefWidth="152.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -70,7 +70,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <GridPane fx:id="responseGrid" layoutX="517.0" layoutY="34.0" prefHeight="429.0" prefWidth="40.0">
+      <GridPane fx:id="responseGrid" layoutX="521.0" layoutY="64.0" prefHeight="429.0" prefWidth="40.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -98,16 +98,16 @@
           <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <Text id="text" fx:id="text" layoutX="283.0" layoutY="540.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="282.6366882324219">
+      <Text id="text" fx:id="text" layoutX="256.0" layoutY="569.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="315.1366882324219">
          <font>
-            <Font name="SansSerif Regular" size="13.0" />
+            <Font name="SansSerif Regular" size="14.0" />
          </font></Text>
-      <Button fx:id="nextButton" layoutX="517.0" layoutY="484.0" mnemonicParsing="false" onAction="#onNextBtnClick" text="Next">
+      <Button fx:id="nextButton" layoutX="521.0" layoutY="514.0" mnemonicParsing="false" onAction="#onNextBtnClick" text="Next">
          <font>
             <Font name="SansSerif Regular" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="questionButton" layoutX="568.0" layoutY="35.0" mnemonicParsing="false" onAction="#onQuestionBtnClick" prefHeight="18.0" prefWidth="8.0">
+      <Button fx:id="questionButton" layoutX="572.0" layoutY="65.0" mnemonicParsing="false" onAction="#onQuestionBtnClick" prefHeight="18.0" prefWidth="8.0">
          <graphic>
             <ImageView fitHeight="14.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
                <image>
